[package]
name = "globe-vis"
version = "0.1.0"
edition = "2021"

[dependencies]
glam = "0.22.0"
glow = "0.12.1"
thiserror = "1.0.38"
rand = "0.8.5"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
glutin = "0.29.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
web-sys = { version = "0.3.61", features=["HtmlCanvasElement", "WebGl2RenderingContext", "Window"] }
wasm-bindgen = "0.2.84"
winit = "0.28.3"
